Remove large files from tracking and update gitignore
- Remove bun.lock and output files from git tracking
- Update .gitignore to exclude large files permanently
- This should resolve GitHub push timeout issues

Co-Authored-By: Same <noreply@same.new>

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,16 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# bun
+bun.lock
+
+# build outputs and archives
+output/
+output.zip
+*.zip
+
+# Large files
+*.tar.gz
+*.tgz
+
 /src/generated/prisma
